--- a/equalizer/index.html
+++ b/equalizer/index.html
@@ -82,7 +82,7 @@
                         }
                     }
 
-                    // Выполняет последовательное анимирование столбика, послче чего добавляет в очередь функций
+                    // Выполняет последовательное анимирование столбика, после чего добавляет в очередь функций
                     // саму себя для повторного анимирования
                     function animate_span(span, timeout, height) {
                         span.animate({height: Math.round(height * Math.random())}, timeout);
